# scene_rasterization

./: .gitignore  CMakeLists.txt  README.md  submission-realtime.md  submission.md
resources/shaders/: bloom_composite.frag  bloom_extract.frag  blur.frag  default.frag  default.vert  durand.frag  durand.vert  shadowmap.vert  texture.frag  texture.vert
scenefiles/: shadow_test.json
scenefiles/antialias/optional/: mirror_primitives.json  reflected_cone.json  reflected_cylinder.json  reflected_sphere.json
scenefiles/final/: diningroom.json
scenefiles/json/: diningroom.json
src/: camera.cpp  camera.h  camerapath.h  cameratrace.cpp  cameratrace.h  debug.h  hdr.cpp  hdr.h  mainwindow.cpp  mainwindow.h  phong.cpp  realtime.cpp  realtime.h  realtimecameramovement.cpp  realtimefbo.cpp  realtimephong.cpp  realtimeshadowmap.cpp  realtimetrimeshes.cpp  settings.h  shadowmap.cpp  transforms.cpp  transforms.h  trimeshes.cpp
src/camera/: camera.cpp  camera.h
src/shapes/: Cone.cpp  Cone.h  Cube.cpp  Cube.h  Cylinder.cpp  Cylinder.h  Sphere.cpp  Sphere.h  Triangle.cpp
src/utils/: imagereader.cpp  imagereader.h  scenedata.h  sceneparser.cpp  sceneparser.h
student_outputs/realtime/required/: camera_rotation.mov
